# california_housing

./: README.md  README.rst  pyproject.toml
california_housing/: california_housing.ipynb
california_housing/.ipynb_checkpoints/: california_housing-checkpoint.ipynb  plot-checkpoint.py
tests/: test_california_housing.py
