[tool.poetry]
name = "california_housing"
version = "0.1.0"
description = ""
authors = ["YohannR <yohann.rioual@univ-ubs.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
scikit-learn = "^1.1.2"
jupyterlab = "^3.4.5"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
